<resources>
    <string name="app_name">BodyTemperature Demok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_temperature">My temperature</string>
    <string name="inputHint">0</string>
    <string name="my_logs">Logs</string>
    <string name="txtDateLog">Ноябр. 21</string>
    <string name="log_temperature">36.0</string>
    <string name="btn_delete_log_item">Delete</string>
    <string name="txtTimeLog">16:15</string>
    <string name="fahrenheit_or_celsius">Fahrenheit or Celsius?</string>
    <string name="fahrenheit">°F</string>
    <string name="celsius">°C</string>
    <string name="txtBtnNext">Next</string>
    <string name="menu_item_track">Track</string>
    <string name="menu_item_logs">Logs</string>
</resources>